test/lexerTest/fail/test9.ic
//"is this invisible?"
a += -> b

Can it take skipped lines?


"" unmatched" ""


int ctt = 9; 
